--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             $('#start').click(function() {
                 var urlParams = new URLSearchParams(window.location.search)
                 console.log(urlParams.get('stream'))
+                console.log('Extracting URL parameters)
                 var streamName = $('#streamName').val();
 
                 // Step 1: Configure SDK Clients
