--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
             </div>
         </div>
         <script>
-            configureLogging();
-
             var urlParams = new URLSearchParams(window.location.search),
                 streamName = urlParams.get('stream');
 
@@ -84,71 +82,22 @@
                 }, function(err, response) {
                     if (err) { return console.error(err); }
                     console.log('HLS Streaming Session URL: ' + response.HLSStreamingSessionURL);
-
+                    
                     // Step 4: Give the URL to the video player.
-                    var playerName = "VideoJS";
-                    if (playerName === 'VideoJS') {
-                        var playerElement = $('#videojs');
-                        playerElement.show();
-                        var player = videojs('videojs');
-                        console.log('Created VideoJS Player');
+                    var player = videojs('videojs');
+                    console.log('Created VideoJS Player');
 
-                        player.src({
-                            src: response.HLSStreamingSessionURL,
-                            type: 'application/x-mpegURL'
-                        });
-                        console.log('Set player source');
+                    player.src({
+                        src: 
 
-                        player.play();
-                        console.log('Starting playback');
-                    } else if (playerName === 'Shaka Player') {
-                        var playerElement = $('#shaka');
-                        playerElement.show();
+                        .HLSStreamingSessionURL,
+                        type: 'application/x-mpegURL'
+                    });
+                    console.log('Set player source');
 
-                        var player = new shaka.Player(playerElement[0]);
-                        console.log('Created Shaka Player');
-
-                        player.load(response.HLSStreamingSessionURL).then(function() {
-                            console.log('Starting playback');
-                        });
-                        console.log('Set player source');
-                    }
-                });
-
-                $('.player').hide();
+                    player.play();
+                    console.log('Starting playback');                    
             });
-
-            // Initially hide the player elements
-            $('.player').hide();
-
-            function configureLogging() {
-                console._error = console.error;
-                console.error = function(messages) {
-                    log('ERROR', Array.prototype.slice.call(arguments));
-                    console._error.apply(this, arguments);
-                }
-
-                console._log = console.log;
-                console.log = function(messages) {
-                    log('INFO', Array.prototype.slice.call(arguments));
-                    console._log.apply(this, arguments);
-                }
-
-                function log(level, messages) {
-                    var text = '';
-                    for (message of messages) {
-                        if (typeof message === 'object') { message = JSON.stringify(message, null, 2); }
-                        text += ' ' + message;
-                    }
-                    $('#logs').append($('<div>').text('[' + level + ']' + text + '\n'));
-                }
-            }
-
-            function updateTimestampFieldState() {
-                var isLive = $('#playbackMode').val() === 'LIVE';
-                $('#startTimestamp').prop('disabled', isLive);
-                $('#endTimestamp').prop('disabled', isLive);
-            }
 
             console.log("Page loaded")
         </script>
