--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                         <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/5.14.1/videojs-contrib-hls.js"></script>
 
                     </div>
+                    <h3 style="margin-top: 20px;">Logs</h3>
+                    <div class="card bg-light mb-3">
+                        <pre id="logs" class="card-body text-monospace" style="font-family: monospace; white-space: pre-wrap;"></pre>
+                    </div>                    
                 </div>
             </div>
         </div>
@@ -81,6 +85,27 @@
                     player.play();
                     console.log('Starting playback');                    
             });
+
+            function configureLogging() {
+                console._error = console.error;
+                console.error = function(messages) {
+                    log('ERROR', Array.prototype.slice.call(arguments));
+                    console._error.apply(this, arguments);
+                }
+                console._log = console.log;
+                console.log = function(messages) {
+                    log('INFO', Array.prototype.slice.call(arguments));
+                    console._log.apply(this, arguments);
+                }
+                function log(level, messages) {
+                    var text = '';
+                    for (message of messages) {
+                        if (typeof message === 'object') { message = JSON.stringify(message, null, 2); }
+                        text += ' ' + message;
+                    }
+                    $('#logs').append($('<div>').text('[' + level + ']' + text + '\n'));
+                }
+            }
 
             console.log("Page loaded")
         </script>
