--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 }
             }
 
+            configureLogging();
             console.log("Page loaded")
         </script>
         <style>
