--- a/index.html
+++ b/index.html
@@ -31,88 +31,7 @@
         <script>
             var urlParams = new URLSearchParams(window.location.search),
                 streamName = urlParams.get('stream');
-
-            // Step 1: Configure SDK Clients
-            var options = {
-                accessKeyId: urlParams.get('access_key'),
-                secretAccessKey: decodeURI(urlParams.get('secret_key')),
-                sessionToken: undefined,
-                region: "us-east-1",
-                endpoint: undefined
-            }
-            var kinesisVideo = new AWS.KinesisVideo(options);
-            var kinesisVideoArchivedContent = new AWS.KinesisVideoArchivedMedia(options);
-
-            // Step 2: Get a data endpoint for the stream
-            console.log('Fetching data endpoint');
-            kinesisVideo.getDataEndpoint({
-                StreamName: streamName,
-                APIName: "GET_HLS_STREAMING_SESSION_URL"
-            }, function(err, response) {
-                if (err) { return console.error(err); }
-                console.log('Data endpoint: ' + response.DataEndpoint);
-                kinesisVideoArchivedContent.endpoint = new AWS.Endpoint(response.DataEndpoint);
-
-                // Step 3: Get an HLS Streaming Session URL
-                console.log('Fetching HLS Streaming Session URL');
-                kinesisVideoArchivedContent.getHLSStreamingSessionURL({
-                    StreamName: streamName,
-                    PlaybackMode: "ON_DEMAND",
-                    HLSFragmentSelector: {
-                        FragmentSelectorType: "SERVER_TIMESTAMP",
-                        TimestampRange: {
-                            StartTimestamp: new Date(decodeURI(urlParams.get('start'))),
-                            EndTimestamp: new Date(decodeURI(urlParams.get('end')))
-                        }
-                    },
-                    DiscontinuityMode: "ALWAYS"
-                }, function(err, response) {
-                    if (err) { return console.error(err); }
-                    console.log('HLS Streaming Session URL: ' + response.HLSStreamingSessionURL);
-                    
-                    // Step 4: Give the URL to the video player.
-                    var player = videojs('videojs');
-                    console.log('Created VideoJS Player');
-
-                    player.src({
-                        src: 
-
-                        .HLSStreamingSessionURL,
-                        type: 'application/x-mpegURL'
-                    });
-                    console.log('Set player source');
-
-                    player.play();
-                    console.log('Starting playback');                    
-            });
-
-            function configureLogging() {
-                console._error = console.error;
-                console.error = function(messages) {
-                    log('ERROR', Array.prototype.slice.call(arguments));
-                    console._error.apply(this, arguments);
-                }
-                console._log = console.log;
-                console.log = function(messages) {
-                    log('INFO', Array.prototype.slice.call(arguments));
-                    console._log.apply(this, arguments);
-                }
-                function log(level, messages) {
-                    var text = '';
-                    for (message of messages) {
-                        if (typeof message === 'object') { message = JSON.stringify(message, null, 2); }
-                        text += ' ' + message;
-                    }
-                    $('#logs').append($('<div>').text('[' + level + ']' + text + '\n'));
-                }
-            }
-
-            configureLogging();
-            console.log("Page loaded")
+            console.log(streamName);
         </script>
-        <style>
-            #playerContainer, .player { width: 100%; height: auto; min-height: 400px; background-color: black; }
-            .vjs-big-play-button { display: none !important; }
-        </style>
     </body>
 </html>
